src/features/Container/Protocols/DigitizedPanel/Digitized.scss
.section-single-content {
  .readable-content {
    height: 500px;
    flex: 1 1 auto;
    .supContent {
      display: flex;
    }
    p {
      margin: 5px 0 0 0;
    }

    p.header {
      font-weight: bold;
    }
  }
}
.accordion_summary_container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 48px;
  p {
    line-height: 1.2;
    padding: 10px 0;
  }
}

@media only screen and (max-width: 1366px) {
  .accordion_summary_container p {
    font-size: 14px;
  }
}

